task 6: написала тесты для контроллеров, мапперов, фабрик и других классов