@@ -4,7 +4,7 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.MappingConstants;
 import org.mapstruct.Named;
-import ru.julia.dto.response.DepartmentResponseDto;
+import ru.julia.controller.dto.response.DepartmentResponseDto;
 import ru.julia.orm.jpamodel.DepartmentJpa;
 
 import java.util.Arrays;
@@ -12,10 +12,15 @@ import java.util.List;
 
 @Mapper(componentModel = MappingConstants.ComponentModel.SPRING)
 public interface DepartmentJpaResponseDtoMapper {
+    String DELIMITER = ",";
     @Mapping(source = "phoneNumbers", target = "phoneNumbers", qualifiedByName = "stringPhoneNumbersToList")
     DepartmentResponseDto toResponseDto(DepartmentJpa departmentJpa);
     @Named("stringPhoneNumbersToList")
-    static List<String> stringPhoneNumbersToList(String phoneNumbers) {
-        return Arrays.asList(phoneNumbers.split(","));
+    default List<String> stringPhoneNumbersToList(String phoneNumbers) {
+        if (phoneNumbers == null) {
+            return List.of();
+        }
+        String[] splitPhoneNumbers = phoneNumbers.split(DELIMITER);
+        return Arrays.stream(splitPhoneNumbers).map(String::trim).toList();
     }
 }
